--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/abstract.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/abstract.tex
@@ -1,3 +1,14 @@
-\begin{frame}{Abstract}
-    \todo{}
+% !TeX root = main.tex
+
+
+\begin{frame}{提案の概要}
+    \begin{itemize}
+        \item 本論文では, ROS 2のスケジューリングモデルと応答時間分析を提案する
+        \item 本論文の目的は以下 3 つ
+        \begin{enumerate}
+            \item アプリケーションの最悪応答時間を制限する実用的な分析をロボットエンジニアに提供する
+            \item リアルタイムの観点から, 現在の ROS 2 実装の選択肢に光を当てる
+            \item 現実的なリアルタイムスケジューリングモデルを提示する
+        \end{enumerate}
+    \end{itemize}
 \end{frame}
