--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
@@ -48,7 +48,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item このケーススタディでは, オドメトリ入力からホイールコマンド出力までのパスのエンドツーエンドのレイテンシに関心がある (速度の「vel」で示される)
+        \item このケーススタディでは, オドメトリ入力からホイールコマンド出力までのパスのエンドツーエンドレイテンシに関心がある (速度の「vel」で示される)
 \item この待ち時間は, 例えば, ロボットの前に突然現れた障害物にロボットが反応するのにかかる時間を決定するため, 安全性に関連している
 \item イベントドリブンセットアップでは, これはアクティベーションからチェーンの完了までの最悪応答時間として定義される
 \item 時間駆動型のセットアップでは, ローカルプランナーの応答時間を計算し, センサ入力にジッターがある場合は, アクティベーション期間を最悪サンプリングレイテンシとして追加する
