--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
@@ -26,15 +26,15 @@
 \maketitle
 
 % \summary
-\input{abstract.tex}
+% \input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
-% \input{introduction.tex}
-% \input{background.tex}
+% \input{introduction.tex} % wait kobayu
+\input{background.tex}
 % \input{ros_scheduling.tex}
 % \input{system_model.tex}
 % \input{response_time_analysis_for_processing_chains.tex}
