--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
@@ -3,7 +3,7 @@
 \section{BACKGROUND}
 \label{sec: background}
 
-
+%%%% wait kobayu
 % \subsection{ROS}
 % \label{ssec: ros}
 
@@ -109,21 +109,23 @@
 
 \begin{frame}{リソースの予約}
     \begin{itemize}
-        \item ROS スレッドの予測可能なサービスを確保するための理想的なメカニズムは, リソースの予約である
+        \item ROS スレッドの予測可能なサービスを確保するためのメカニズムはリソースの予約
         \item リソースの予約は通常, 予約サーバによって実装される
-        \item 予約サーバ $r_{i}$ は予算 $Q_{i}$ と周期 $P_{i}$ によって特徴付けられ, そのクライアントスレッドが各周期に $Q_{i}$ 単位の実行時間を受け取ることを保証する
+        \begin{block}{リソースの予約}
+            予約サーバ $r_{i}$ は予算 $Q_{i}$ と周期 $P_{i}$ によって特徴付けられ, そのクライアントスレッドが各周期に $Q_{i}$ 単位の実行時間を受け取ることを保証する
+        \end{block}
     \end{itemize}
 \end{frame}
 
 \begin{frame}{リソースの予約に関する仮定}
     \begin{itemize}
         \item 本論文では, 予約サーバーが周期的リソースモデル~\cite{shin2003periodic}に準拠している, すなわち, 以下を仮定する
-        \begin{enumerate}
-            \item 各予約には暗黙のデッドラインがある
-            \item $r_i$がワークロードを持つときはいつでも, 予約アルゴリズムが$P_i$時間単位ごとに少なくとも$Q_i$単位のサービスを保証する
-            \item 予算枯渇と他の予約によるレイテンシによる, ある予約で実行中のプロセスが経験する有限の最大リリースレイテンシが存在する
-        \end{enumerate}
-        \item ある長さの区間において予約が提供するサービスの最小量は, 既知の供給境界関数 $sbf()$ \cite{shin2003periodic, lipari2003resource} で表すことができる
+              \begin{enumerate}
+                  \item 各予約には暗黙のデッドラインがある
+                  \item $r_i$がワークロードを持つときはいつでも, 予約アルゴリズムが$P_i$時間単位ごとに少なくとも$Q_i$単位のサービスを保証する
+                  \item 予算枯渇と他の予約のレイテンシによる, ある予約で実行中のプロセスが受ける有限の最大リリースレイテンシが存在する
+              \end{enumerate}
+        \item ある長さの区間において予約が提供するサービスの最小量は, 既知の供給境界関数 $sbf()$ \cite{shin2003periodic, lipari2003resource} で得られる
     \end{itemize}
 \end{frame}
 
@@ -136,48 +138,51 @@
     \end{frame}
 }
 
-% \subsection{Compositional Performance Analysis}
-% \label{ssec: compositional performance analysis}
 
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item 構成パフォーマンス分析 (CPA) は, ヘテロジニアスシステムと分散システムのパフォーマンスを分析的に評価するアプローチである [27]
-%         \item CPA は, システムをリソースのネットワークとしてモデル化し, ワークロードを依存関係のあるタスクとしてモデル化する
-%         \item リソースは, タスクによって消費される処理時間を提供する
-%     \end{itemize}
-% \end{frame}
+\forme{
+    \subsection{Compositional Performance Analysis}
+    \label{ssec: compositional performance analysis}
 
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item 依存関係のあるタスクは直接非巡回グラフとして編成され, グラフ内のパスは処理チェーンとして示される
-%         \item 同じリソースを共有するタスクは, リソース固有のスケジューリングポリシーに従ってスケジュールされる
-%         \item チェーンのソースタスクは, 外部から提供されたイベント到着曲線 $[27,30,62] \eta^{e}(\Delta)$ に従ってトリガされる
-%         \item これは, 任意の時間枠 $[t, t+\Delta)$ に到着できるイベント数の上界を定義する
-%     \end{itemize}
-% \end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item 構成パフォーマンス分析 (CPA) は, ヘテロジニアスシステムと分散システムのパフォーマンスを分析的に評価するアプローチである [27]
+            \item CPA は, システムをリソースのネットワークとしてモデル化し, ワークロードを依存関係のあるタスクとしてモデル化する
+            \item リソースは, タスクによって消費される処理時間を提供する
+        \end{itemize}
+    \end{frame}
 
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item イベント到着曲線は, 周期的およびイベント駆動型 (割り込み駆動型など) の両方のアクティベーションをモデル化するのに十分一般的である [47]
-%         \item 例えば, タスク $T_{x}$ が定期的にトリガされる場合, その到着曲線は $\eta_{x}^{e}(\Delta)=\left[\frac{\Delta}{\operatorname{period}(x)}\right]$ として表すことができる
-%         \item 非ソースタスクは, 導出されたアクティベーションカーブに従ってトリガされる
-%         \item アクティベーション曲線は, 先行タスクによるアクティベーションレイテンシを反映し, 応答時間に依存するリリースジッターを考慮して, 到着曲線から取得される
-%     \end{itemize}
-% \end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item 依存関係のあるタスクは直接非巡回グラフとして編成され, グラフ内のパスは処理チェーンとして示される
+            \item 同じリソースを共有するタスクは, リソース固有のスケジューリングポリシーに従ってスケジュールされる
+            \item チェーンのソースタスクは, 外部から提供されたイベント到着曲線 $[27,30,62] \eta^{e}(\Delta)$ に従ってトリガされる
+            \item これは, 任意の時間枠 $[t, t+\Delta)$ に到着できるイベント数の上界を定義する
+        \end{itemize}
+    \end{frame}
 
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item しかし, 応答時間はリリースジッターにも依存するため, 周期的な依存関係が生じる
-%         \item この問題を解決するために, 分析はゼロの初期ジッターで開始し, 収束が達成されるまで繰り返し応答時間分析を適用し, 全てのジッター境界を更新する [42,63]
-%         \item 収束は, 応答時間とジッタの間の単調な依存性によって (過負荷のないシステムの場合) 保証される (ジッタが大きいほど, 応答時間は長くなり, その逆も同様である)
-%         \item 基本的な CPA アプローチでは, チェーンのエンドツーエンドレイテンシを, 各タスクの個々の応答時間の境界の合計で制限する
-%         \item その後, [54, 56] のように, 解析精度を向上させる拡張機能が設計された
-%     \end{itemize}
-% \end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item イベント到着曲線は, 周期的およびイベント駆動型 (割り込み駆動型など) の両方のアクティベーションをモデル化するのに十分一般的である [47]
+            \item 例えば, タスク $T_{x}$ が定期的にトリガされる場合, その到着曲線は $\eta_{x}^{e}(\Delta)=\left[\frac{\Delta}{\operatorname{period}(x)}\right]$ として表すことができる
+            \item 非ソースタスクは, 導出されたアクティベーションカーブに従ってトリガされる
+            \item アクティベーション曲線は, 先行タスクによるアクティベーションレイテンシを反映し, 応答時間に依存するリリースジッターを考慮して, 到着曲線から取得される
+        \end{itemize}
+    \end{frame}
 
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item ROS は, カスタムスケジューリングポリシーを使用して独特な方法でコールバックをディスパッチするエグゼキュータを提供するため, 既存の CPA の文献とツールは ROS に完全に一致するものではない
-%         \item しかし, CPA から自由にインスピレーションを得て, 次に紹介する ROS の特異性を反映した, 同様に柔軟なタイミングモデルを取得する
-%     \end{itemize}
-% \end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item しかし, 応答時間はリリースジッターにも依存するため, 周期的な依存関係が生じる
+            \item この問題を解決するために, 分析はゼロの初期ジッターで開始し, 収束が達成されるまで繰り返し応答時間分析を適用し, 全てのジッター境界を更新する [42,63]
+            \item 収束は, 応答時間とジッタの間の単調な依存性によって (過負荷のないシステムの場合) 保証される (ジッタが大きいほど, 応答時間は長くなり, その逆も同様である)
+            \item 基本的な CPA アプローチでは, チェーンのエンドツーエンドレイテンシを, 各タスクの個々の応答時間の境界の合計で制限する
+            \item その後, [54, 56] のように, 解析精度を向上させる拡張機能が設計された
+        \end{itemize}
+    \end{frame}
+
+    \begin{frame}{}
+        \begin{itemize}
+            \item ROS は, カスタムスケジューリングポリシーを使用して独特な方法でコールバックをディスパッチするエグゼキュータを提供するため, 既存の CPA の文献とツールは ROS に完全に一致するものではない
+            \item しかし, CPA から自由にインスピレーションを得て, 次に紹介する ROS の特異性を反映した, 同様に柔軟なタイミングモデルを取得する
+        \end{itemize}
+    \end{frame}
+}
